# Univ-Ghostlab

./: .gitignore  CMakeLists.txt  Makefile  README.md
c/: CMakeLists.txt  Makefile
c/src/: maze.c
c/src/client/: command.c  command.h  gui.c  gui.h  main.c  message.c  message.h  shared.c  shared.h  thread_handler_start.c  thread_handler_start.h  thread_multicast.c  thread_multicast.h  thread_multicast_game_listener.c  thread_multicast_game_listener.h  thread_multicast_general_listener.c  thread_multicast_general_listener.h  thread_multicast_server.c  thread_multicast_server.h  thread_start_handler.c  thread_start_handler.h  thread_tcp_listener.c  thread_tcp_listener.h  thread_udp.c  thread_udp.h  thread_udp_listener.c  thread_udp_listener.h  ui.c  ui.h
c/src/common/: array.c  array.h  command.c  command.h  game.c  game.h  gui.c  gui.h  log.c  log.h  maze.c  maze.h  memory.c  memory.h  message.c  message.h  network.c  network.h  print.c  print.h  string.c  string.h  types.h  ui.c  ui.h  utils.c  utils.h
c/src/server/: command.c  command.h  gui.c  gui.h  main.c  message.c  message.h  shared.c  shared.h  thread_connection.c  thread_connection.h  thread_games_handler.c  thread_ghosts_handler.c  thread_ghosts_handler.h  thread_handler_ghosts.c  thread_handler_ghosts.h  thread_matches.c  thread_matches.h  thread_multicast.c  thread_multicast.h  thread_tcp.c  thread_tcp.h  thread_tcp_acceptor.c  thread_tcp_acceptor.h  thread_tcp_connection.c  thread_tcp_connection.h  thread_tcp_listener.c  thread_tcp_listener.h  ui.c  ui.h
c/src/test/: maze.c
java/: build.gradle.kts  gradle.properties  settings.gradle.kts
java/com/ustudents/ghostlab/interaction/: InteractionPerPhase.java
java/com/ustudents/ghostlab/runnable/: UDPRunnable.java
java/src/main/java/com/ustudents/application/: Application.java
java/src/main/java/com/ustudents/application/event/: Event.java  EventDispatcher.java  EventListener.java
java/src/main/java/com/ustudents/application/graphic/: ImGuiManager.java  ImGuiUtils.java  Viewport.java
java/src/main/java/com/ustudents/application/input/: Input.java  InputSystemType.java
java/src/main/java/com/ustudents/application/input/empty/: EmptyInput.java
java/src/main/java/com/ustudents/application/input/glfw/: GLFWInput.java
java/src/main/java/com/ustudents/application/math/: Vector2f.java  Vector2i.java  Vector4f.java
java/src/main/java/com/ustudents/application/window/: Window.java  WindowInfo.java  WindowSystemType.java
java/src/main/java/com/ustudents/application/window/empty/: EmptyWindow.java
java/src/main/java/com/ustudents/application/window/events/: CursorMovedEvent.java  KeyStateChangedEvent.java  MouseButtonStateChangedEvent.java  ScrollMovedEvent.java  SizeChangedEvent.java
java/src/main/java/com/ustudents/application/window/glfw/: GLFWWindow.java
java/src/main/java/com/ustudents/common/: Program.java
java/src/main/java/com/ustudents/common/command/: Command.java  Option.java  Runnable.java
java/src/main/java/com/ustudents/common/log/: Out.java
java/src/main/java/com/ustudents/common/utils/: FileUtil.java  Pair.java  ReflectionUtil.java  Resources.java  StringUtil.java  Timer.java
java/src/main/java/com/ustudents/ghostlab/: Main.java
java/src/main/java/com/ustudents/ghostlab/client/: Client.java  Serveur.java  Utils.java
java/src/main/java/com/ustudents/ghostlab/communication/: Reader.java  Sender.java
java/src/main/java/com/ustudents/ghostlab/interaction/: InteractionInGamePhase.java  InteractionIntroductionPhase.java  InteractionPerPhase.java
java/src/main/java/com/ustudents/ghostlab/listener/: MulticastRunnable.java  TCPRunnable.java  UDPMulticastRunnable.java  UDPRunnable.java
java/src/main/java/com/ustudents/ghostlab/menu/: MainScene.java  Scene.java  SceneData.java  UsernameChoiceScene.java
java/src/main/java/com/ustudents/ghostlab/other/: GameModel.java  InteractionInGamePhase.java  InteractionIntroductionPhase.java  InteractionPerPhase.java  Player.java  Utils.java
java/src/main/java/com/ustudents/ghostlab/runnable/: TCPRunnable.java  UDPMulticastRunnable.java  UDPRunnable.java
java/src/main/java/com/ustudents/ghostlab/scene/: GameLobbyScene.java  InGameScene.java  MainScene.java  Scene.java  SceneData.java  UserChoiceScene.java  UsernameChoiceScene.java
src/main/c/: array.c  array.h  client.c  client_common.c  client_common.h  client_message.c  client_message.h  client_thread_multicast_listener.c  client_thread_multicast_listener.h  client_thread_udp_listener.c  client_thread_udp_listener.h  command.c  command.h  memory.c  memory.h  message.c  message.h  network.c  network.h  print.c  print.h  server.c  server_command.c  server_command.h  server_common.c  server_common.h  server_message.c  server_message.h  server_thread_client_listener.c  server_thread_client_listener.h  server_thread_clients_acceptor.c  server_thread_clients_acceptor.h  server_thread_game.c  server_thread_game.h  server_thread_multicast_sender.c  server_thread_multicast_sender.h  string.c  string.h  types.h  utils.c  (+1 more)
src/main/java/com/ustudents/ghostlab/: Client.java  InteractionInGamePhase.java  InteractionIntroductionPhase.java  InteractionPerPhase.java  Serveur.java  Utils.java
src/main/java/com/ustudents/ghostlab/client/: Client.java  Serveur.java  Utils.java
src/main/java/com/ustudents/ghostlab/interaction/: InteractionInGamePhase.java  InteractionIntroductionPhase.java
src/main/java/com/ustudents/ghostlab/runnable/: TCPRunnable.java  UDPMulticastRunnable.java
